# RapidDoc

./: .gitignore  README.md  README_EN.md  changelog-mineru.txt  demo-mineru.py  demo.py  magic.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_whl.yml
chunk/: example_chunk.py  get_bbox_page_fast.py  text_splitters.py
chunker/: README.md  chunk_test.py  example_chunk.py  get_bbox_page_fast.py  text_splitters.py
demo/: RapidDoc_end2end.py  demo-mineru.py  demo.py  generate_result_tables.py  omnidocbench-eval.sh  overall_layout_v3-ocrv6_smail_pytorch_tablev3.csv  overall_result_layout_v3-ocrv6_smail_auto_tablev3.csv  overall_result_layout_v3-ocrv6_smail_rect_tablev3.csv
docker/: .env.example  Dockerfile  DockerfileGPU  README.md  README_API.md  app.py  docker-compose-gpu.yml  docker-compose.yml  download_file.py  download_models.py  file_converter.py  local.Dockerfile  models_download_utils.py  push.sh  requirements-gpu.txt  requirements.txt  start_with_env.sh
docs/: analyze_param.md
kitty_doc/: version.py
kitty_doc/backend/pipeline/: batch_analyze.py  model_init.py  model_json_to_middle_json.py  para_split.py  pipeline_analyze.py  pipeline_magic_model.py  pipeline_middle_json_mkcontent.py
kitty_doc/cli/: common.py
kitty_doc/model/: rapid_table_test-cells.py  rapid_table_test.py
kitty_doc/model/formula/: rapid_formula_model.py
kitty_doc/model/formula/rapid_formula_self/: main.py
kitty_doc/model/formula/rapid_formula_self/configs/: default_models.yaml  engine_cfg.yaml
kitty_doc/model/formula/rapid_formula_self/model_handler/: utils.py
kitty_doc/model/formula/rapid_formula_self/utils/: load_image.py  typings.py
kitty_doc/model/layout/: rapid_layout.py
kitty_doc/model/layout/rapid_layout_self/: main.py
kitty_doc/model/layout/rapid_layout_self/configs/: default_models.yaml  engine_cfg.yaml
kitty_doc/model/layout/rapid_layout_self/inference_engine/: openvino.py
kitty_doc/model/layout/rapid_layout_self/utils/: load_image.py  typings.py  utils.py
kitty_doc/model/ocr/: rapid_ocr.py
kitty_doc/model/reading_order/: xycut_plus.py
kitty_doc/model/table/: rapid_table.py
kitty_doc/model/table/rapid_table_self/: __init__.py  default_models.yaml  engine_cfg.yaml  main.py
kitty_doc/model/table/rapid_table_self/inference_engine/: torch.py
kitty_doc/model/table/rapid_table_self/table_cls/: main.py
kitty_doc/model/table/rapid_table_self/table_matcher/: main.py  (+1 more)
kitty_doc/utils/: block_pre_proc.py  block_sort.py  checkbox_det_cls.py  config_reader.py  draw_bbox.py  enum_class.py  llm_aided.py  magic_model_utils.py  model_utils.py  ocr_utils.py  pdf_classify.py  pdf_image_tools.py  pdf_text_tool.py  span_block_fix.py  span_pre_proc.py  table_merge.py
rapid_doc/: __init__.py  main.py  version.py
rapid_doc/backend/: utils.py
rapid_doc/backend/office/: docx_analyze.py  model_output_to_middle_json.py  office_analyze.py  office_magic_model.py  office_middle_json_mkcontent.py  pptx_analyze.py  xlsx_analyze.py
rapid_doc/backend/office/mkcontent/: inline_renderer.py  output_builders.py
rapid_doc/backend/pipeline/: analyze_utils.py  batch_analyze.py  model_init.py  model_json_to_middle_json.py  model_list.py  para_split.py  pipeline_analyze.py  pipeline_magic_model.py  pipeline_middle_json_mkcontent.py
rapid_doc/backend/utils/: html_image_utils.py  office_image.py  utils.py
rapid_doc/cli/: common.py  gradio_app.py
rapid_doc/data/data_reader_writer/: multi_bucket_s3.py
rapid_doc/data/io/: s3.py
rapid_doc/model/custom/paddleocr_vl/: genai.py  paddleocr_vl.py  predictor.py  uilts.py
rapid_doc/model/docx/: docx_converter.py  main.py  package_normalizer.py
rapid_doc/model/fast_langdetect/: __init__.py  infer.py
rapid_doc/model/formula/: rapid_formula_model.py
rapid_doc/model/formula/rapid_formula_self/: main.py
rapid_doc/model/layout/: rapid_layout.py
rapid_doc/model/layout/rapid_layout_self/: main.py
rapid_doc/model/magika/: __init__.py  logger.py  magika.py
rapid_doc/model/magika/types/: __init__.py  content_type_info.py  content_type_label.py  magika_prediction.py  magika_result.py  model.py  overwrite_reason.py  prediction_mode.py  status.py
rapid_doc/model/ocr/: ocr_patch.py  openvino.py  rapid_ocr.py  seal_crop.py  torch.py
rapid_doc/model/ocr/ppocrv6_pytorch/: __init__.py
rapid_doc/model/orientation/: rapid_orientation_model.py
rapid_doc/model/pptx/: main.py  pptx_converter.py
rapid_doc/model/reading_order/: utils.py  xycut_plus.py
rapid_doc/model/reading_order/layout_parsing/: layout_objects.py  setting.py  utils.py  xycut_plus_v2.py  xycut_plus_v3.py
rapid_doc/model/table/: rapid_table.py  utils.py
rapid_doc/model/table/rapid_table_self/: default_models.yaml  engine_cfg.yaml  main.py
rapid_doc/model/table/rapid_table_self2/: main.py
rapid_doc/model/xlsx/: main.py  xlsx_converter.py
rapid_doc/resources/: arch_config.yaml  header.html  ppocrv6_small_dict.txt
rapid_doc/utils/: PyPDFium2Parser.py  block_pre_proc.py  block_sort.py  boxbase.py  checkbox_det_cls.py  config_reader.py  cut_image.py  download_file.py  draw_bbox.py  empty_office.py  enum_class.py  guess_suffix_or_lang.py  hash_utils.py  language.py  llm_aided.py  magic_model_utils.py  markdown_to_word.py  model_utils.py  models_download_utils.py  ocr_utils.py  office_converter.py  pdf_classify.py  pdf_image_tools.py  pdf_reader.py  pdf_text_tool.py  pdfium_guard.py  span_block_fix.py  span_pre_proc.py  table_merge.py
tests/: checkbox_detection_classification.py  checkbox_detection_classification_promax.py  export_table_rec_dataset.py  extract_images_test.py  img2table_test.py  ocr_test.py  ocr_test1.py  ocr_test2.py  orientation_test.py  pdftext_test.py  pypdfium2_test.py  rapid_layout_test.py  rapid_table_cls_test.py  rapid_table_test-cells.py  rapid_table_test-layout-table.py  rapid_table_test.py  rapid_table_v3.py  rapidocr_test.py  seal_test.py  table_cls_test3.py  table_cls_test4.py  table_recognition_metric_test.py  tablev4.py  vl-1.0.py  vl-1.5.py  vl-1.6.py
tests/unittest/: test_e2e.py
(+66 files in other folders)
